# auto-xkcd

./: .envrc  .gitignore  404.html  README.md  cli.py  dockerctl.py  example.minio_conf.json  index.html  noxfile.py  objects.inv  pyproject.toml  requirements.txt  testfile.txt
.OLD/: .gitattributes  README.md  docker-compose-ref.md  dockerctl_cli_map.drawio  mkdocs.yml
.OLD/.github/workflows/: main_run_nox_scripts.yaml
.OLD/config/celery/: .secrets.example.toml
.OLD/config/db/: settings.toml
.OLD/config/fastapi/: settings.toml
.OLD/config/minio/: .secrets.example.toml  settings.toml
.OLD/config/telegram/: .secrets.example.toml
.OLD/config/uvicorn/: settings.toml
.OLD/containers/: .gitignore  docker-compose.prod.yml
.OLD/containers/auto-xkcd/: Dockerfile
.OLD/containers/devcontainers/minio/: .env.example  docker-compose.yml
.OLD/containers/devcontainers/rabbitmq_redis/: docker-compose.yml
.OLD/containers/env_files/: dev.example.env
.OLD/docs/: requirements.txt
.OLD/requirements/: requirements.txt
.OLD/scripts/: compose_build.sh  compose_build_no-cache_run.sh  compose_logs.sh
.OLD/src/auto_xkcd/: start_celery_beat.py  start_celery_worker.py  test.py
.OLD/src/auto_xkcd/api/: __init__.py
.OLD/src/auto_xkcd/celeryapp/: _celeryapp.py
.OLD/src/auto_xkcd/core/: __init__.py  config.py
.OLD/src/auto_xkcd/frontend/: _tags.py
.OLD/src/auto_xkcd/helpers/: __init__.py
.OLD/src/auto_xkcd/modules/: __init__.py
.OLD/src/auto_xkcd/pipelines/: pipeline_prefab.py
.OLD/src/auto_xkcd/templates/: base.html
applications/project-cli/: pyproject.toml
applications/project-cli/src/project_cli/: __init__.py  __main__.py  celery.py  db.py  main.py  setup.py
applications/project-cli/src/project_cli/_alembic/: __init__.py  _cli.py
config/: .secrets.toml  settings.toml
config/celery/: settings.toml
config/fastapi/: .secrets.toml  settings.toml
config/minio/: settings.toml
config/telegram/: settings.toml
config/uvicorn/: settings.toml
containers/: compose.yml  dev.compose.yml  docker-compose.dev.yml  docker-compose.prod.yml  messaging.compose.yml
containers/devcontainers/minio/: docker-compose.yml
containers/devcontainers/rabbitmq_redis/: docker-compose.yml
containers/dockerfiles/: Dockerfile  celery.Dockerfile  dev.Dockerfile
containers/env_files/: dev.example.env  prod.example.env
containers/envs/dev/: app.env.example  messaging.env.example
containers/envs/prod/: app.env.example
devcontainers/minio/: .gitignore
docs/: index.md  requirements.txt
libs/database-lib/src/db_lib/: __methods.py  base.py
libs/depends-lib/src/depends/: db_depends.py
libs/http-lib/src/http_lib/: controllers.py
libs/settings-lib/src/settings/: __init__.py  __settings.py
libs/setup-lib/src/setup/: __setup_db.py  __setup_logging.py
migrations/: env.py
migrations/versions/: 2838aca92f65_autogenerated_migration.py
reference/SUMMARY/: index.html
reference/auto_xkcd/__init__/: index.html
reference/auto_xkcd/_cli/__init__/: index.html
reference/auto_xkcd/_setup/: index.html
reference/auto_xkcd/cli/: index.html
reference/auto_xkcd/core/__init__/: index.html
reference/auto_xkcd/core/config/: index.html
reference/auto_xkcd/core/constants/: index.html
reference/auto_xkcd/core/dependencies/: index.html
reference/auto_xkcd/core/paths/: index.html
reference/auto_xkcd/domain/__init__/: index.html
reference/auto_xkcd/entrypoints/__init__/: index.html
reference/auto_xkcd/helpers/__init__/: index.html
reference/auto_xkcd/main/: index.html
reference/auto_xkcd/modules/__init__/: index.html
reference/auto_xkcd/pipelines/__init__/: index.html
reference/auto_xkcd/start_current_comic_pipeline/: index.html
reference/auto_xkcd/start_multiple_comic_pipeline/: index.html
reference/auto_xkcd/start_scrape_missing_pipeline/: index.html
reference/auto_xkcd/test/: index.html
requirements/: requirements.dev.txt  requirements.txt
sandbox/celery/: print_celery_tasks.py  start_celery.py
sandbox/debug/: debug_settings.py
sandbox/demo/: http_req.py
sandbox/ntfy/: debug_config.py  test_notification.py
sandbox/xkcd/: api_crawler.py  proto.py
scripts/: compose_build_no-cache.sh  compose_build_run.sh  compose_build_run_logs.sh  compose_down.sh  compose_full.sh  compose_full_no-cache.sh  compose_run.sh
scripts/celery/: start_celery.py
scripts/db/: set_current_comic_meta.py
scripts/minio/: .gitignore
scripts/minio/jobs/: example.job.copy.json  example.job.delete.json  example.job.download.json  example.job.move.json  example.job.upload.json
search/: search_index.json
src/auto-xkcd/: main.py
src/auto-xkcd/core/: __init__.py  config.py  dependencies.py  paths.py
src/auto_xkcd/: __init__.py  _setup.py  celeryapp.py  cli.py  demo.py  get_current_comic.py  loop_get_current_comic.py  main.py  minio-test.py  start_api.py  start_celery_app.py  start_celery_beat.py  start_celery_worker.py  start_current_comic_pipeline.py  start_frontend.py  start_multiple_comic_pipeline.py  start_save_serialized_comics_to_db_pipeline.py  start_scrape_missing_pipeline.py  test.py
src/auto_xkcd/_cli/: __init__.py
src/auto_xkcd/_cli/groups/: __init__.py
src/auto_xkcd/api/: __init__.py  _config.py  _depends.py  _main.py  _responses.py  _tags.py
src/auto_xkcd/celeryapp/: __init__.py  _celeryapp.py  celeryconfig.py
src/auto_xkcd/core/: __init__.py  config.py  constants.py  dependencies.py  paths.py
src/auto_xkcd/domain/: __init__.py
src/auto_xkcd/entrypoints/: __init__.py
src/auto_xkcd/frontend/: _main.py
src/auto_xkcd/pipelines/: __init__.py  methods.py  pipeline_prefab.py
src/auto_xkcd/setup/: __init__.py  _setup.py
src/auto_xkcd/templates/: base.html
src/auto_xkcd/utils/: __init__.py
src_bak/auto_xkcd/: main.py  start_comic_scraper.py
src_bak/auto_xkcd/core/: dependencies.py  paths.py
src_old/auto_xkcd/: demo.py  main.py  test.py
src_old/auto_xkcd/core/: __init__.py
src_old/auto_xkcd/pipelines/: __init__.py
(+308 files in other folders)
