[project]
name = "auto-xkcd"
version = "0.1.0"
description = "Default template for PDM package"
authors = [{ name = "redjax", email = "none@none.com" }]
dependencies = [
    "httpx>=0.27.0",
    "hishel>=0.0.24",
    "sqlalchemy>=2.0.29",
    "pendulum>=3.0.0",
    "pydantic>=2.6.4",
    "pydantic-settings>=2.2.1",
    "loguru>=0.7.2",
    "red-utils>=0.2.18",
    "msgpack>=1.0.8",
    "pandas>=2.2.1",
    "dynaconf>=3.2.5",
    "minio>=7.2.5",
]
requires-python = ">=3.11"
readme = "README.md"
license = { text = "MIT" }

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
dev = ["black>=24.3.0", "ruff>=0.3.4", "pytest-xdist>=3.5.0", "nox>=2024.3.2"]

[tool.pdm.scripts]

lint = { cmd = "ruff check ./ --config ruff.ci.toml --fix" }
