[project]
name = "auto-xkcd"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "coreutils-lib",
    "database-lib",
    "depends-lib",
    "domain",
    "dynaconf>=3.2.6",
    "http-lib",
    "loguru>=0.7.3",
    "minio>=7.2.15",
    "project-cli",
    "scheduling",
    "settings-lib",
    "setup-lib",
    "xkcdapi",
]

[dependency-groups]
dev = ["nox>=2024.10.9", "pytest-xdist>=3.6.1", "ruff>=0.9.2"]

[tool.uv.workspace]
members = [
    "libs/*",
    "packages/xkcdapi",
    "packages/domain",
    "packages/scheduling",
    "applications/project-cli",
]

[tool.uv.sources]
coreutils-lib = { workspace = true }
database-lib = { workspace = true }
depends-lib = { workspace = true }
http-lib = { workspace = true }
settings-lib = { workspace = true }
setup-lib = { workspace = true }
xkcdapi = { workspace = true }
domain = { workspace = true }
scheduling = { workspace = true }
project-cli = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.setuptools]
py-modules = []

[tool.hatch.build.targets.wheel]
packages = ["packages/*", "applications/*"]

[tool.pytest.ini_options]
filterwarnings = ["error", "ignore::UserWarning"]
testpaths = ["tests"]
